fix(mailviewer): Fix horizontal scroll for iframe in message view

--- a/src/app/mailviewer/singlemailviewer.component.css
+++ b/src/app/mailviewer/singlemailviewer.component.css
@@ -14,7 +14,7 @@
 
 #messageHeader {
     margin-bottom: 10px;
-    overflow: auto;
+    overflow: hidden;
     border-bottom: 1px solid #e8e8e8;
 }
 
@@ -70,8 +70,6 @@
 }
 
 #messageContent {
-    overflow-y: hidden;
-    overflow-x: scroll;
     margin: 0 2%;
     width: 96%;
     white-space: pre-wrap;
@@ -101,6 +99,7 @@
     border: 0;
     height: 0px;
     width: 100%;
+    margin-bottom: -10px;
 }
 
 .menuradiobutton {
